--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,15 @@
   text-align: center;
 }
 
+body {
+  background-color: rgb(232, 232, 232);
+}
+
 .container {
   display: flex;
   flex-direction: column;
   position: relative;
+  
 }
 
 .name {
@@ -39,3 +44,6 @@
   color: #888;
 }
 
+.tab-panel {
+  width: 500px; /* Adjust the width as needed */
+}
